2018-06-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h,
	  src/SDCCBBlock.c:
	  Infrastructure for custom iCode dump point.
	* src/SDCClospre.hpp:
	  Fix handling of use vector in lospre.
	* src/SDCClrange.h,
	  src/SDCClrange.c,
	  src/SDCCopt.c:
	  Fix secondary issue in bug #2756.

2018-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: fix bugs #2709 and #1951
	* support/regression/tests/gcc-torture-execute-20001027-1.c,
	* support/regression/tests/bug-2708.c: enable tests

2018-06-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-2756.c:
	  disabled for test-mcs51-large and test-mcs51-huge due to build failure.

2018-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCset.c: reduce memory use of unionSets()

2018-06-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-2756.c:
	  disabled for test-host.

2018-06-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  support/regression/tests/bug-2756.c:
	  Fix main issue in bug #2756.

2018-06-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c: fix bug #2737

2018-06-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c: fix bug #2759
	* src/SDCCglue.c: fix bug #2749
	* support/regression/tests/bug-2749: enable test

2018-06-11 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/literalop.c:
	  Improved for aarch64.

2018-06-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c,
	* src/SDCCbitv.h: simplify to only access bit vector as unsigned
	  int, add functions for in-place intersection and union operations
	* src/SDCCset.c,
	* src/SDCCset.h: new function destructItemIf calls a destructor
	  function before deleting a set item
	* src/SDCCBBlock.c,
	* src/SDCCBBlock.h,
	* src/SDCCopt.c: free some eBBlock data when switching to iCode chain
	* src/SDCCcflow.c: free code flow data when not needed
	* src/SDCCdflow.c,