@@ -54,5 +54,8 @@ size_t c16rtomb(char *restrict s, char16_t c16, mbstate_t *restrict ps);
 size_t mbrtoc32(char32_t *restrict pc32, const char *restrict s, size_t n, mbstate_t *restrict ps);
 size_t c32rtomb(char *restrict s, char32_t c32, mbstate_t *restrict ps);
 
+size_t __mbstoc16s(char16_t *restrict c16s, const char *restrict s, size_t n);
+size_t __c16stombs(char *restrict s, const char16_t *restrict c16s, size_t n);
+
 #endif
 
